# secret-santa

./: .gitignore  LICENSE  README.md  docker-compose.yml
backend/: .env.example  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20240525_0001_initial.py
backend/app/: main.py
backend/app/api/: __init__.py
backend/app/api/routes/: __init__.py  root.py
backend/app/core/: config.py  database.py
backend/app/models/: __init__.py  base.py  box.py  draw.py  email_invite.py  participant.py  refresh_token.py  settings.py  social_auth.py  user.py
backend/app/schemas/: __init__.py
backend/app/services/: __init__.py
backend/app/workers/: __init__.py  email.py
docs/: ai-development-brief.md  architecture.md  decisions.md  draw-engine.md  product-spec.md  roadmap.md  security-privacy.md  setup.md  ui-mockups.md
docs/research/: santa-secret-page-audit.md
frontend/: .eslintrc.cjs  index.html  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/app/: AppLayout.tsx
frontend/src/components/: LanguageSwitcher.tsx
frontend/src/i18n/: index.ts
frontend/src/i18n/locales/: en.json  ru.json
frontend/src/pages/: ContactPage.tsx  DashboardPage.tsx  FaqPage.tsx  HomePage.tsx  NotFoundPage.tsx  PrivacyPage.tsx  QuickDrawPage.tsx  ResendEmailPage.tsx  SupportPage.tsx
frontend/src/pages/dashboard/: ArchivePage.tsx  BoxesPage.tsx  NotificationsPage.tsx  (+2 more)
frontend/src/sections/: FaqTeaser.tsx  HowItWorks.tsx
frontend/src/store/: uiStore.ts
infrastructure/: backend.Dockerfile  worker.Dockerfile
