[tool.poetry]
name = "secret-santa-backend"
version = "0.1.0"
description = "Secret Santa platform backend"
authors = ["Secret Santa Team <dev@example.com>"]
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = { extras = ["standard"], version = "^0.30.0" }
python-multipart = "^0.0.9"
passlib = { version = "^1.7.4", extras = ["bcrypt"] }
pyjwt = "^2.8.0"
sqlalchemy = "^2.0.30"
asyncpg = "^0.29.0"
alembic = "^1.13.1"
pydantic-settings = "^2.2.1"
authlib = "^1.3.0"
httpx = "^0.27.0"
redis = "^5.0.4"
celery = "^5.4.0"
email-validator = "^2.1.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.23.6"
ruff = "^0.4.3"
black = "^24.4.2"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
